Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-4650

cachekey: not thread safe

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 6.2.0
    • 6.2.1, 7.0.0
    • Plugins
    • None

    Description

      cachekey's Pattern class is not thread safe; it uses member data to store the result of pcre_exec(), but only one instance is shared between all threads. This causes crashes when two threads access the pcre result at the same time.

      Fix: use automatic storage for the pcre result data.

      PR incoming.

      Attachments

        Activity

          People

            ftarnell Felicity Tarnell
            ftarnell Felicity Tarnell
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0h
                0h
                Logged:
                Time Spent - 3h
                3h