TS-4650: cachekey: not thread safe

(cherry picked from commit f4a97a9d573867441c5dd711b54ff66117fcd057)
(cherry picked from commit 15b2ab08a30a0df8c2223e05c7bfc4cb530ea243)